syntax = "proto3";
option go_package = "grpc-gateway/api/proto";

package online.gonlink;

import "google/api/annotations.proto";
import "common.proto";

// === GetStringBase64Image ===
message GetStringBase64ImageRequest{
  string content = 1;
  int32 width = 2;
  int32 height = 3;
}

message GetStringBase64ImageResponse{
  string base64Image = 1;
}

service QRCodeService {
  rpc getStringBase64Image(GetStringBase64ImageRequest) returns(online.gonlink.BaseGrpc){
    option (google.api.http) = {
      post: "/api/v1/qr-codes"
      body: "*"
    };
  }
}

